@@ -1,6 +1,7 @@
 CHANGELOG XX XXX 2011 Pierre Frisch
 Rev the source code to 3.4.2
 Update service text - ID: 3400063
+Interface Discovery - ID: 3399444
 
 CHANGELOG 24 August 2011 Pierre Frisch
 Rev the source code to 3.4.1
